--- a/index.html
+++ b/index.html
@@ -19,10 +19,28 @@
 <![endif]-->
 </head>
 <body>
-
-
-  <!--Import jQuery-->
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <header class="site-header">
+    <nav class="site-nav">
+      <div class="container">
+        <a href="#">
+          <img src="assets/img/blueasy-logo.png" alt="blueasy">
+        </a>
+        <ul>
+          <li><a href="#" class="active">home</a></li>
+          <li><a href="#">services</a></li>
+          <li><a href="#">features</a></li>
+          <li><a href="#">portfolio</a></li>
+          <li><a href="#">contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <div class="container">
+      <h1 class="hero-heading">
+        <span>“I’m looking for the unexpected.</span><br>
+        <span>I’m looking for things I’ve never seen before.”</span>
+      </h1>
+    </div>
+  </header>
   <!-- jQuery for older IE -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Site Sripts -->
