--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="#">
           <img src="assets/img/blueasy-logo.png" alt="blueasy">
         </a>
-        <ul>
+        <ul class="horizontal-nav">
           <li><a href="#" class="active">home</a></li>
           <li><a href="#">services</a></li>
           <li><a href="#">features</a></li>
@@ -41,6 +41,73 @@
       </h1>
     </div>
   </header>
+
+  <section class="stn-services">
+    <h2 class="container stn-heading">Services</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-lg-3">
+          <div class="sprite-coffee"></div>
+          <h3>coffee</h3>
+          <p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="sprite-instant"></div>
+          <h3>instant</h3>
+          <p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="sprite-dslr"></div>
+          <h3>serious</h3>
+          <p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="sprite-frame"></div>
+          <h3>frame</h3>
+          <p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <div class="stn-portfolio">
+    <section class="container tab-wrapper">
+      <ul class="horizontal-nav black-font tab-menu">
+          <li><a href="#" class="active">all</a></li>
+          <li><a href="#">panoramas</a></li>
+          <li><a href="#">portraits</a></li>
+          <li><a href="#">macro</a></li>
+          <li><a href="#">journal</a></li>
+      </ul>
+      <h2 class="stn-heading black-line container">Portfolio</h2>
+      <div class="row thumbs-row">
+        <div class="col-sm-6 col-md-3"><a href="#" class="thumb-1"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#" class="thumb-2"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#" class="thumb-3"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#" class="thumb-4"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#" class="thumb-5"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#" class="thumb-6"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#" class="thumb-7"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#" class="thumb-8"></a></div>
+      </div>
+      <div class="row thumbs-row">
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+      </div>
+      <div class="row thumbs-row">
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+      </div>
+    </section>
+  </div>
   <!-- jQuery for older IE -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Site Sripts -->
