--- a/index.html
+++ b/index.html
@@ -108,6 +108,36 @@
       </div>
     </section>
   </div>
+
+  <section class="stn-video">
+    <h2 class="stn-heading container">Just default section</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-5">
+          <p>Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears pastry gummi bears sesame snaps I love unerdwear.com. Soufflé cotton candy dessert candy ice cream wafer gummies cheesecake brownie.</p>
+          <p>Muffin chupa chups jelly beans sweet pie applicake. Croissant chocolate cake I love pudding. Ice cream I love powder pudding apple pie marshmallow. Cupcake marzipan oat cake bonbon I love candy canes toffee.</p>
+          <a href="#" class="btn-univ-gray">visit me</a>
+        </div>
+        <div class="col-md-6 col-md-offset-1 stn-video-col">
+          <div class="videoWrapper">
+            <iframe src="https://player.vimeo.com/video/155458853?color=ed4c97&badge=0" width="500" height="209" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="stn-twitter">
+    <h2 class="stn-heading container">Twitter <i class="icon-twitter stn-twitter-icon"></i></h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-11">
+          <p>Unerdwear cookie liquorice. Cake donut cupcake lollipop soufflé candy. Chocolate oat cake <strong>@cheesecake</strong> tootsie roll</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- jQuery for older IE -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Site Sripts -->
