--- a/index.html
+++ b/index.html
@@ -138,6 +138,36 @@
     </div>
   </section>
 
+  <section class="stn-about">
+    <h2 class="stn-heading container">Who is John Doe?</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <p>Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears pastry gummi bears sesame snaps I love unerdwear.com. Soufflé cotton candy dessert candy ice cream wafer gummies cheesecake brownie.</p>
+          <p>Muffin chupa chups jelly beans sweet pie applicake. Croissant chocolate cake I love pudding. Ice cream I love powder pudding apple pie marshmallow. Cupcake marzipan oat cake bonbon I love candy canes toffee.</p>
+        </div>
+        <div class="col-md-6">
+          <p>Pudding dessert jujubes tiramisu gingerbread croissant tiramisu applicake. Sesame snaps sugar plum cotton candy chocolate bonbon lemon drops candy canes cotton candy. Cake toffee pie bear claw pastry.</p>
+          <ul class="social-links">
+            <li><a href="#"><i class="icon-twitter"></i></a></li>
+            <li><a href="#"><i class="icon-google-plus"></i></a></li>
+            <li><a href="#"><i class="icon-dribbble"></i></a></li>
+            <li><a href="#"><i class="icon-coffee" ></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="stn-testimonials">
+    <h2 class="stn-heading container black-line">Testimonials <i class="icon-quote"></i></h2>
+    <div class="container">
+      <blockquote class="tst-quote">
+        Applicake chocolate cake wafer toffee pie soufflé wafer. Tart marshmallow wafer macaroon cheesecake jelly. Gingerbread cookie soufflé sweet roll sweet roll jelly-o.
+        <cite>Walter White</cite>
+      </blockquote>
+    </div>
+  </section>
   <!-- jQuery for older IE -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Site Sripts -->
