--- a/index.html
+++ b/index.html
@@ -168,6 +168,66 @@
       </blockquote>
     </div>
   </section>
+
+  <section class="stn-contact">
+    <h2 class="stn-heading container">Contact</h2>
+    <div class="container">
+      <form class="row">
+
+        <div class="col-md-6 col-md-push-6 frm-text-col">
+          <p>
+            Jujubes bear claw croissant wafer sweet lemon drops brownie chocolate bar. Sweet lollipop halvah tootsie roll cake fruitcake. Chocolate cake chocolate bar gingerbread lollipop tart. Jujubes bear claw donut chupa chups.
+          </p>
+          <p>
+            Linda Newman<br>
+            W325 State Road 123<br>
+            Mondovi, WI(Wisconsin) 98746-54321<br>
+            (715) 946 - 1234
+          </p>
+        </div>
+
+        <div class="col-md-5 col-md-pull-6">
+          <div class="frm-group">
+            <label for="name">Full name</label>
+            <input id="name" type="text" class="frm-control">
+          </div>
+
+          <div class="frm-group">
+            <label for="mail">Email</label>
+            <input id="mail" type="email" class="frm-control">
+          </div>
+        </div>
+
+        
+        <div class="col-md-12">
+          <div class="frm-group">
+            <label for="messege">Massege</label>
+            <textarea class="frm-control" id="messege"></textarea>
+          </div>
+        </div>
+
+        <div class="col-sm-6">
+          <button type="sumbit" class="btn-submit">Messege</button>
+        </div>
+
+      </form>
+    </div>
+  </section>
+  
+  <footer class="site-footer">
+    <div class="container">
+      <nav>
+        <ul class="footer-nav">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <p class="copyright">2016 &copy</p>
+      </nav>
+    </div>
+  </footer>
+
   <!-- jQuery for older IE -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Site Sripts -->
