adaptive site navigation

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <a href="#">
           <img src="assets/img/blueasy-logo.png" alt="blueasy">
         </a>
-        <ul class="horizontal-nav">
+        <span class="main-nav-trigger trigger-nav"><a class="ninja-btn" title="menu"><span></span></a></span>
+        <ul class="horizontal-nav trigger-victim">
           <li><a href="#" class="active">home</a></li>
           <li><a href="#">services</a></li>
           <li><a href="#">features</a></li>
