create adaptive tab navigation

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 
   <div class="stn-portfolio">
     <section class="container tab-wrapper">
-      <ul class="horizontal-nav black-font tab-menu">
+    <span class="main-nav-trigger trigger-nav"><a class="ninja-btn" title="menu"><span></span></a></span>
+      <ul class="horizontal-nav black-font tab-menu trigger-victim">
           <li><a href="#" class="active">all</a></li>
           <li><a href="#">panoramas</a></li>
           <li><a href="#">portraits</a></li>
