fix jumps in tab navigation

--- a/index.html
+++ b/index.html
@@ -97,6 +97,30 @@
         <div class="col-sm-6 col-md-3"><a href="#"></a></div>
         <div class="col-sm-6 col-md-3"><a href="#"></a></div>
         <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+      </div>
+      <div class="row thumbs-row">
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+      </div>
+      <div class="row thumbs-row">
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
+        <div class="col-sm-6 col-md-3"><a href="#"></a></div>
       </div>
       <div class="row thumbs-row">
         <div class="col-sm-6 col-md-3"><a href="#"></a></div>
